# ObjectState

./: BADGE_SETUP.md  DOCUMENTATION_FIXES.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.rst  conf.py  index.rst
docs/api/: modules.rst
docs/examples/: index.rst
examples/: config.py
src/hieraconf/: __init__.py  context_manager.py  dual_axis_resolver.py  global_config.py  lazy_factory.py  live_context_resolver.py  object_state.py  parametric_axes.py  placeholder.py  reified_generics.py  snapshot_model.py
src/lazy_config/: cache_warming.py  config.py  context_manager.py  lazy_factory.py  placeholder.py
src/objectstate/: __init__.py  collection_containers.py  config.py  context_manager.py  dual_axis_resolver.py  lazy_factory.py  live_context_resolver.py  object_state.py  parametric_axes.py  placeholder.py  reified_generics.py  token_cache.py
src/objectstate/docs/: configuration_framework.rst  context_system.rst  object_state_lifecycle.rst
tests/: __init__.py  conftest.py  test_auto_decorator_flow.py  test_config.py  test_context_manager.py  test_dual_axis_resolver.py  test_global_config.py  test_integration.py  test_lazy_factory.py  test_parametric_axes.py  test_placeholder.py  test_reified_generics.py
